--- a/burger-queen/src/components/Header/styles.css
+++ b/burger-queen/src/components/Header/styles.css
@@ -1,10 +1,3 @@
-header#main-header {
-  width: 100%;
-  height: 90px;
-  background-color: black;
-  font-size: 38px;
-  font-weight: bold;
-  color: #FFFF;
-  margin: 20px;
-  align-self: baseline ;
+header#logo {
+  width: 80%;
 }
