--- a/burger-queen/src/styles.css
+++ b/burger-queen/src/styles.css
@@ -7,6 +7,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
   color: #FFF;
   background-color: black;
   display: flex;
