deleting items, options buttons ok

--- a/burger-queen/src/pages/Chef/styles.css
+++ b/burger-queen/src/pages/Chef/styles.css
@@ -5,7 +5,7 @@ section#all {
   flex-direction: column;
 }
 
-section#order-card {
+section#chef-card {
   background-color: #FFF;
   width: 100%;
   height: auto;
