--- a/burger-queen/src/pages/Chef/styles.css
+++ b/burger-queen/src/pages/Chef/styles.css
@@ -31,7 +31,24 @@ hr#lines {
 }
 
 p#option {
-  border: 1px solid black;
+  background-color: rgb(194, 194, 194);
+  color: black;
   border-radius: 5px;
+  font-size: 15px;
   padding: 10px;
+}
+
+p#extra {
+  background-color: #adfa70;
+  color: black;
+  border-radius: 5px;
+  font-size: 15px;
+  padding: 10px;
+}
+
+div#options-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 }
