order status ok + Ready page

--- a/burger-queen/src/pages/Chef/styles.css
+++ b/burger-queen/src/pages/Chef/styles.css
@@ -52,3 +52,12 @@ div#options-info {
   align-items: center;
   flex-direction: row;
 }
+
+button.back{
+  position: fixed;
+  bottom:40px;
+  right:10px;
+  border-radius: 30px;
+  opacity: 0.8;
+  padding: 15px;
+}
