--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -16,7 +16,14 @@ button.btn:hover {
   background-color: #5BE72A;
 }
 
+button::-moz-focus-inner {
+  border: 0;
+}
+
 button#quant-btn {
-  font-size: 20px;
+  font-size: 22px;
   padding: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
