--- a/src/pages/Waiter/styles.css
+++ b/src/pages/Waiter/styles.css
@@ -4,15 +4,16 @@ h1#waiter {
 
 section#item-card {
   background-color: #FFF;
-  width: 90%;
+  width: 30%;
   height: auto;
   border-radius: 5px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
   color: black;
   padding: 10px;
+  margin: 10px;
 }
 
 main#all-menu {
@@ -28,7 +29,7 @@ section#client-form{
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  width: 76%;
+  width: 94%;
   border: 1px solid #FFF;
   border-radius: 5px;
   padding: 10px;
@@ -36,11 +37,12 @@ section#client-form{
 }
 
 ul#items-list {
-  width: 85%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 section#resume-card {
@@ -58,7 +60,7 @@ section#resume-card {
 hr#resume-line {
   border-top: 2px solid black;
   border-bottom: none;
-  width: 90%;
+  width: 100%;
 }
 
 h1#resume {
@@ -76,7 +78,7 @@ section#order-card {
 }
 
 div#quantity {
-  width: 90%;
+  width: 100%;
   display: flex;
   justify-content: center;
   flex-direction: row;
@@ -160,7 +162,7 @@ img#photo {
 }
 
 figure#img-box {
-  width: 50%;
+  width: 100%;
   height: 30%;
   display: flex;
   justify-content: center;
@@ -168,7 +170,7 @@ figure#img-box {
 }
 
 article#product-info {
-  width: 70%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
